--- a/nifi-framework-bundle/nifi-framework/nifi-resources/src/main/resources/conf/nifi.properties
+++ b/nifi-framework-bundle/nifi-framework/nifi-resources/src/main/resources/conf/nifi.properties
@@ -31,6 +31,7 @@ nifi.queue.backpressure.size=${nifi.queue.backpressure.size}
 
 nifi.authorizer.configuration.file=${nifi.authorizer.configuration.file}
 nifi.login.identity.provider.configuration.file=${nifi.login.identity.provider.configuration.file}
+nifi.ui.banner.text=${nifi.ui.banner.text}
 nifi.nar.library.directory=${nifi.nar.library.directory}
 nifi.nar.library.autoload.directory=${nifi.nar.library.autoload.directory}
 nifi.nar.working.directory=${nifi.nar.working.directory}
