--- a/nifi-commons/nifi-properties/src/test/resources/NiFiProperties/conf/nifi.properties
+++ b/nifi-commons/nifi-properties/src/test/resources/NiFiProperties/conf/nifi.properties
@@ -23,6 +23,7 @@ nifi.administrative.yield.duration=30 sec
 
 nifi.reporting.task.configuration.file=./target/reporting-tasks.xml
 nifi.controller.service.configuration.file=./target/controller-services.xml
+nifi.ui.banner.text=UI Banner Text
 nifi.nar.library.directory=./target/resources/NiFiProperties/lib/
 nifi.nar.library.directory.alt=./target/resources/NiFiProperties/lib2/
 nifi.nar.working.directory=./target/work/nar/
