NIFI-13710: Attempting to fix the codemirror import issue across apps and lib.

--- a/nifi-frontend/src/main/frontend/apps/nifi/project.json
+++ b/nifi-frontend/src/main/frontend/apps/nifi/project.json
@@ -55,11 +55,11 @@
                         {
                             "type": "initial",
                             "maximumWarning": "2mb",
-                            "maximumError": "3mb"
+                            "maximumError": "6mb"
                         }
                     ],
-                    "outputHashing": "all",
-                    "optimization": true
+                    "outputHashing": "none",
+                    "optimization": false
                 },
                 "development": {
                     "optimization": false,
