--- a/nifi-frontend/src/main/frontend/apps/update-attribute/project.json
+++ b/nifi-frontend/src/main/frontend/apps/update-attribute/project.json
@@ -41,16 +41,16 @@
                         {
                             "type": "initial",
                             "maximumWarning": "2mb",
-                            "maximumError": "3mb"
+                            "maximumError": "6mb"
                         },
                         {
                             "type": "anyComponentStyle",
                             "maximumWarning": "2kb",
-                            "maximumError": "4kb"
+                            "maximumError": "6mb"
                         }
                     ],
-                    "outputHashing": "all",
-                    "optimization": true
+                    "outputHashing": "none",
+                    "optimization": false
                 },
                 "development": {
                     "optimization": false,
